samples/_failures_safe/1761428903_6a329f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_46113907.c: In function ‘main’:
./samples/SAFE/__tmp_46113907.c:158:26: error: missing terminating " character
  158 |     mat1.cols = read_int("Enter number of columns (1
      |                          ^~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_46113907.c:158:5: error: expected expression at end of input
  158 |     mat1.cols = read_int("Enter number of columns (1
      |     ^~~~
./samples/SAFE/__tmp_46113907.c:158:17: error: too few arguments to function ‘read_int’
  158 |     mat1.cols = read_int("Enter number of columns (1
      |                 ^~~~~~~~
./samples/SAFE/__tmp_46113907.c:16:5: note: declared here
   16 | int read_int(const char* prompt, int min, int max) {
      |     ^~~~~~~~
./samples/SAFE/__tmp_46113907.c:158:5: error: expected declaration or statement at end of input
  158 |     mat1.cols = read_int("Enter number of columns (1
      |     ^~~~
